gccida/c3/simplify_comparison
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_comparison/src/combine.c:10393:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  simplify_comparison( rtx_code code, rtx *pop0, rtx *pop1) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_comparison/src/combine.c:10393:32: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  simplify_comparison( rtx_code code, rtx *pop0, rtx *pop1) 
                               ^
                               enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_comparison/src/combine.c:10396:4: error: expected ';' after expression
rtx v4; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_comparison/src/combine.c:10396:5: error: use of undeclared identifier 'v4'
rtx v4; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_comparison/src/combine.c:10415:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v23; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_comparison/src/combine.c:10429:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v37; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_comparison/src/combine.c:10430:4: error: expected ';' after expression
rtx v38; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_comparison/src/combine.c:10430:5: error: use of undeclared identifier 'v38'
rtx v38; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_comparison/src/combine.c:10434:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v42; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_comparison/src/combine.c:10436:4: error: expected ';' after expression
rtx compound_operation; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_comparison/src/combine.c:10436:5: error: use of undeclared identifier 'compound_operation'; did you mean 'make_compound_operation'?
rtx compound_operation; // rbx 
    ^~~~~~~~~~~~~~~~~~
    make_compound_operation
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_comparison/src/combine.c:6337:1: note: 'make_compound_operation' declared here
make_compound_operation (x, in_code)
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_comparison/src/combine.c:10438:4: error: expected ';' after expression
rtx v46; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_comparison/src/combine.c:10438:5: error: use of undeclared identifier 'v46'
rtx v46; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_comparison/src/combine.c:10458:4: error: expected ';' after expression
rtx v66; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_comparison/src/combine.c:10458:5: error: use of undeclared identifier 'v66'
rtx v66; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_comparison/src/combine.c:10461:4: error: expected ';' after expression
rtx v69; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_comparison/src/combine.c:10461:5: error: use of undeclared identifier 'v69'
rtx v69; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_comparison/src/combine.c:10470:4: error: expected ';' after expression
rtx v78; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_comparison/src/combine.c:10470:5: error: use of undeclared identifier 'v78'
rtx v78; // r12 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/simplify_comparison/src/obj/combine.o] Error 1
